# rn-wav-to-flac

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  rn-wav-to-flac.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/rnwavtoflac/: RnWavToFlacModule.java  RnWavToFlacModule.kt  RnWavToFlacPackage.java  RnWavToFlacPackage.kt
cpp/include/: ResultCode.h  WavMetadataReader.hpp  WavToFlacEncoder.hpp  WavToFlacFileConverter.hpp  rn-wav-to-flac.h  rn-wav-to-flac.hpp
cpp/include/FLAC/: assert.h
cpp/src/: WavMetadataReader.cpp  WavToFlacEncoder.cpp  WavToFlacFileConverter.cpp  rn-wav-to-flac.cpp
cpp/src/libFLAC/: float.c  format.c  lpc.c  stream_decoder.c  stream_encoder.c  stream_encoder_framing.c  window.c
cpp/src/libFLAC++/: stream_decoder.cpp  stream_encoder.cpp
cpp/src/libFLAC/include/private/: all.h  fixed.h  lpc.h  memory.h  window.h
cpp/src/libFLAC/include/protected/: stream_encoder.h
cpp/src/share/grabbag/: cuesheet.c
example/: README.md  app.json  package.json  react-native.config.js
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/rnwavtoflac/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/rnwavtoflac/: MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/example/rnwavtoflac/newarchitecture/: MainApplicationReactNativeHost.java
example/android/app/src/main/java/com/example/rnwavtoflac/newarchitecture/components/: MainComponentsRegistry.java
example/android/app/src/main/java/com/example/rnwavtoflac/newarchitecture/modules/: MainApplicationTurboModuleManagerDelegate.java
example/android/app/src/main/java/rnwavtoflac/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/jni/: MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/RnWavToFlacExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/RnWavToFlacExample.xcodeproj/: project.pbxproj
example/ios/RnWavToFlacExample.xcodeproj/xcshareddata/xcschemes/: RnWavToFlacExample.xcscheme
example/ios/RnWavToFlacExample.xcworkspace/: contents.xcworkspacedata
example/ios/RnWavToFlacExampleTests/: RnWavToFlacExampleTests.m
example/src/: App.tsx
ios/: RnWavToFlac.h  RnWavToFlac.mm
ios/RnWavToFlac.xcodeproj/: project.pbxproj
lib/commonjs/: index.js  index.js.map
lib/module/: index.js  index.js.map
lib/typescript/module/src/: index.d.ts  index.d.ts.map
src/: index.tsx
